Properly bind custom ld.config.txt
Change-Id: I236b0183d4aee463b410912334dfc695b9d9e487

--- a/init.dragon.rc
+++ b/init.dragon.rc
@@ -268,3 +268,6 @@ service tlk_daemon /vendor/bin/tlk_daemon --storagedir /data/ss --rpmbdev /dev/b
 
 on property:debug.bq25892=dump
     exec - root root system -- /vendor/bin/dump_bq25892.sh
+
+on property:apexd.status=ready
+    mount none /system/etc/swcodec/ld.config.txt /apex/com.android.media.swcodec/etc/ld.config.txt bind
