--- a/dumpstate/android.hardware.dumpstate@1.0-service.dragon.rc
+++ b/dumpstate/android.hardware.dumpstate@1.0-service.dragon.rc
@@ -1,4 +1,4 @@
-service dumpstate-1-0 /vendor/bin/hw/android.hardware.dumpstate@1.0-service.dragon
+service vendor.dumpstate-1-0 /vendor/bin/hw/android.hardware.dumpstate@1.0-service.dragon
     class hal
     user system
     group system
